gastos completo e classe SomarCellDataGrid O.O. no Projeto Engines

--- a/Sistema.View/views/AddGastosSaidaView.resx
+++ b/Sistema.View/views/AddGastosSaidaView.resx
@@ -120,4 +120,29 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAE4AAAC9AAAAvwAAAL8AAAC/AAAAvwAAAL8AAAC/AAAAvwAAAL8AAAC/AAAAvwAA
+        AL0AAABMAAAAAAAAAAAAAAC9AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAAvQAAAAAAAAAAAAAAUwAAAG8AAABvAAAAbwAAAG8AAABvAAAAbwAAAG8AAABvAAAAbwAA
+        AG8AAABvAAAAbwAAAFMAAAAAAAAAAAAAAIAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAB/AAAAAAAAAAAAAAASAAAA6wAAAP8AAAD/AAAAfQAAAH0AAAB9AAAAfQAA
+        AH0AAAB9AAAA/wAAAP8AAADrAAAAEQAAAAAAAAAAAAAAAAAAAH8AAAD+AAAA/wAAANQAAADUAAAA1AAA
+        ANQAAADUAAAA1AAAAP8AAAD+AAAAfwAAAAAAAAAAAAAAAAAAAAAAAAArAAAA6AAAAP8AAADUAAAA1AAA
+        ANQAAADUAAAA1AAAANQAAAD/AAAA6AAAACsAAAAAAAAAAAAAAAAAAAAAAAAABQAAALEAAAD/AAAAfQAA
+        AH0AAAB9AAAAfQAAAH0AAAB9AAAA/wAAALAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzAAAA6wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAOsAAAAzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKAAA
+        AG0AAABwAAAAcAAAAHAAAABwAAAAcAAAAHAAAABtAAAAKAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ALMAAAClAAAAbwAAAG8AAABvAAAAbwAAAG8AAABvAAAApQAAALIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAC/AAAAXwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF8AAAC/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAvQAAAJsAAABfAAAAXwAAAF8AAABfAAAAXwAAAF8AAACbAAAAvQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAE4AAAC9AAAAvwAAAL8AAAC/AAAAvwAAAL8AAAC/AAAAvQAAAEwAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAIABAACAAQAAgAEAAIABAACAAQAAwAMAAMADAADAAwAA4AcAAOAHAADgBwAA5+cAAOAH
+        AADgBwAA//8AAA==
+</value>
+  </data>
 </root>
