correções, revisao de codigo e limpeza, icones adicionados etc..

--- a/Sistema.View/views/SaidaEncomendasView.resx
+++ b/Sistema.View/views/SaidaEncomendasView.resx
@@ -128,24 +128,24 @@
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZgAAAL8AAAC/AAAAZgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKkAAACAAAAAgQAAAKgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADYAAAB7AAAAFAAAAEwAAADVAAAAKwAAACwAAADVAAAAUAAA
+        ABQAAAB7AAAANgAAAAAAAAAAAAAAAAAAAAcAAAC9AAAAxQAAANsAAADUAAAAbQAAAAsAAAALAAAAbQAA
+        ANQAAADbAAAAxQAAALsAAAAHAAAAAAAAAAAAAABuAAAA0gAAABcAAAAiAAAAGQAAAAAAAAAZAAAAGQAA
+        AAAAAAAZAAAAIgAAABcAAADSAAAAbgAAAAAAAAAAAAAAMwAAAMgAAACUAAAACwAAAAAAAABzAAAA1gAA
+        ANYAAABzAAAAAAAAAAsAAACTAAAAxwAAADMAAAAAAAAAAAAAAAAAAAAlAAAA3gAAAB8AAAAZAAAA1gAA
+        ADEAAAAxAAAA1gAAABkAAAAfAAAA3gAAACQAAAAAAAAAAAAAAAAAAAAAAAAAJgAAAN4AAAAfAAAAGQAA
+        ANYAAAAxAAAAMQAAANYAAAAZAAAAHwAAAN0AAAAkAAAAAAAAAAAAAAAAAAAANAAAAMgAAACTAAAACwAA
+        AAAAAAByAAAA1gAAANYAAAByAAAAAAAAAAsAAACUAAAAxQAAADEAAAAAAAAAAAAAAG4AAADSAAAAFgAA
+        ACIAAAAYAAAAAAAAABgAAAAYAAAAAAAAABYAAAAiAAAAFgAAANIAAABuAAAAAAAAAAAAAAAHAAAAvQAA
+        AMQAAADaAAAA0AAAAGcAAAALAAAACgAAAGQAAADPAAAA2gAAAMUAAAC9AAAABwAAAAAAAAAAAAAAAAAA
+        ADYAAAB7AAAAFAAAAEoAAADVAAAALAAAACwAAADVAAAAUQAAABQAAAB7AAAANgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAqAAAAIEAAACBAAAAqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGUAAAC/AAAAvwAAAGUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtIB1QoV9W93BGP9wAAAAAAAAAAAAAAAAAAAAALCIfS6Bf
-        VvdwRT/sAAAAAAAAAAAAAAAAAAAAAAAAAAC3n5CHkFZO+4iDgv+dX1b4mIR2l7efkIe3n5CHao6Qh41c
-        VvOEfXv/nmBX/U6rtposICBAAAAAAAAAAAAAAAAAXk+5/4p2bv+jZFv/fldO/7aej/+2no//tp6P/2mN
-        j/9PsL3/mmtl/25bWP9jke3/KyEf1wAAAAAAAAAAAAAAAGdXY/+HdGr/iHVq/4h1av+IdWr/iHVq/4h1
-        av9agIP/XOb5/1zm+f9c5vn/WcTi/yshH9cAAAAAAAAAAAAAAADSonj/0qJ4/9KieP/Sonj/0qJ4/9Ki
-        eP/Sonj/co+H/1zm+f9jlIj/Y5OI/2OTiP8rIR/XAAAAAAAAAAAAAAAAkG9V/5BvVf+Qb1X/kG9V/5Bv
-        Vf+Qb1X/kG9V/11+fP9c5vn/1M14/9TNeP/UzXj/KyAfrQAAAAAAAAAAAAAAAPHfx//x38f/8d/H//Hf
-        x//x38f/8d/H//Hfx/99o6H/XOb5/9TNeP/UzXj/npdb7QAAAAAAAAAAAAAAAAAAAADx38f/8d/H//Hf
-        x//x38f/8d/H//Hfx//x38f/faOh/1zm+f9TjYz/fbSf/2hxVnEAAAAAAAAAAAAAAAAAAAAA0qJ4/9Ki
-        eP/Sonj/0qJ4/9KieP/Sonj/0qJ4/3FpWdZEhIyHRISMhzpdY4QnJycNAAAAAAAAAAAAAAAAAAAAALGI
-        ZvnPoHf7z6B3+8+gd/vPoHf7z6B3+8+gd/tMOjGiAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAuGxscLB0dNCwdHTQsHR00LB0dNCwdHTQtHh4zAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAA//8AAP//AAD//wAA48cAAMABAADAAQAAwAEAAMABAADAAQAAwAMAAMADAADAAwAAwD8AAMB/
-        AAD//wAA//8AAA==
+        AAAAAAAA//8AAPw/AAD8PwAAwAMAAIABAACCQQAAhCEAAMADAADAAwAAhCEAAIJBAACAAQAAwAMAAPw/
+        AAD8PwAA//8AAA==
 </value>
   </data>
 </root>
