muitas corrigidas, muitos testes e fase de relatorios

--- a/Sistema.View/views/EncomendasEntradaView.resx
+++ b/Sistema.View/views/EncomendasEntradaView.resx
@@ -123,4 +123,29 @@
   <metadata name="toolStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>227, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAANAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAA
+        AA4AAAAAAAAAAAAAAAAAAAAOAAAAogAAAMkAAADEAAAAxAAAAMQAAADEAAAAxAAAAMQAAADEAAAAxAAA
+        AMkAAAChAAAADgAAAAAAAAAAAAAAHwAAAMoAAAA7AAAAHAAAABsAAAAbAAAAGwAAAB8AAAAfAAAAHwAA
+        AB4AAAA7AAAAyQAAAB8AAAAAAAAAAAAAAB8AAADEAAAAHAAAABwAAABaAAAAWgAAAE8AAAAJAAAAAAAA
+        AAAAAAAAAAAAHgAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAAABsAAABNAAAA4gAAAOMAAADIAAAAGgAA
+        AAAAAAAAAAAAAAAAAB8AAADEAAAAHwAAAAAAAAAAAAAAHwAAAMQAAAAfAAAACAAAABsAAAAcAAAAGgAA
+        AAMAAAAAAAAAAAAAAAAAAAAfAAAAxAAAAB8AAAAAAAAAAAAAAB8AAADEAAAAHwAAAAAAAAA1AAAAHAAA
+        AAAAAAAAAAAAHgAAADcAAAAAAAAAHwAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAAAB8AAAAAAAAAogAA
+        ANAAAABzAAAAcwAAANAAAACiAAAAAAAAAB8AAADEAAAAHwAAAAAAAAAAAAAAHwAAAMQAAAAfAAAAAAAA
+        AKUAAACcAAAAowAAAKMAAACcAAAApQAAAAAAAAAfAAAAxAAAAB8AAAAAAAAAAAAAAB8AAADEAAAAHwAA
+        AAAAAAClAAAAXAAAAAIAAAACAAAAXAAAAKUAAAAAAAAAHwAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAA
+        AB4AAAAAAAAApQAAAF0AAAAAAAAAAAAAAF0AAAClAAAAAAAAAB4AAADEAAAAHwAAAAAAAAAAAAAAHwAA
+        AMkAAAA7AAAAHgAAALIAAABzAAAAGwAAABsAAABzAAAAsgAAAB4AAAA7AAAAyQAAAB8AAAAAAAAAAAAA
+        AA4AAACiAAAAyQAAAMQAAADXAAAAzwAAAMQAAADEAAAAzwAAANcAAADEAAAAyQAAAKEAAAANAAAAAAAA
+        AAAAAAAAAAAADgAAAB8AAAAfAAAAHgAAAB4AAAAfAAAAHwAAAB4AAAAeAAAAHwAAAB8AAAAOAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAMADAACAAQAAgAEAAIBxAACAcQAAgHEAAImRAACIEQAAiBEAAIgRAACJkQAAgAEAAIAB
+        AADAAwAA//8AAA==
+</value>
+  </data>
 </root>
