Evolucao no sql no metodo ListarConsumoPorVeiculoNoPeriodoDAO em SaidasDAO

--- a/Sistema.View/relatorios/RelatorioConsumoVeiculos.resx
+++ b/Sistema.View/relatorios/RelatorioConsumoVeiculos.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAANAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAA
+        AA4AAAAAAAAAAAAAAAAAAAAOAAAAogAAAMkAAADEAAAAwgAAAMQAAADEAAAAxAAAAMQAAADEAAAAxAAA
+        AMkAAAChAAAADgAAAAAAAAAAAAAAHwAAAMoAAAA7AAAAHwAAAEQAAAAqAAAAHgAAAB8AAAAfAAAAHwAA
+        AB0AAAA7AAAAyQAAAB8AAAAAAAAAAAAAAB8AAADEAAAAIAAAAA0AAACXAAAAMwAAAAAAAAAdAAAAeQAA
+        AIIAAAB4AAAAPAAAAMIAAAAfAAAAAAAAAAAAAAAfAAAAwgAAAE4AAACbAAAA2wAAALIAAABNAAAAEQAA
+        AEsAAABQAAAASQAAADIAAADDAAAAHwAAAAAAAAAAAAAAHwAAAMMAAAAtAAAANAAAALMAAABZAAAAFAAA
+        ACYAAACaAAAApAAAAJgAAABFAAAAwgAAAB8AAAAAAAAAAAAAAB8AAADEAAAAHgAAAAEAAABaAAAAGgAA
+        AAAAAAAIAAAAHgAAACEAAAAcAAAAJwAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAAAB8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAwAAAA8AAAAAAAAACwAAACAAAADEAAAAHwAAAAAAAAAAAAAAHwAAAMQAAAAiAAAAFAAA
+        ABkAAAAYAAAABgAAABUAAACRAAAAcwAAAIQAAAAqAAAAxAAAAB8AAAAAAAAAAAAAAB8AAADDAAAAMgAA
+        AJEAAACoAAAAoQAAADAAAAAAAAAAewAAAPIAAABpAAAAHwAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAA
+        ACAAAAASAAAAFwAAABYAAAAEAAAAEwAAAI8AAABxAAAAiAAAACwAAADDAAAAHwAAAAAAAAAAAAAAHwAA
+        AMkAAAA7AAAAHAAAAB4AAAAeAAAAHwAAACMAAAAwAAAAIAAAAC8AAAA+AAAAyQAAAB8AAAAAAAAAAAAA
+        AA4AAACiAAAAyQAAAMQAAADEAAAAxAAAAMQAAADEAAAAwwAAAMQAAADDAAAAyQAAAKEAAAANAAAAAAAA
+        AAAAAAAAAAAADgAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAOAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAMADAACAAQAAgAEAAIEBAACAAQAAgAEAAIEBAACPIQAAgAEAAICBAACAAQAAgAEAAIAB
+        AADAAwAA//8AAA==
+</value>
+  </data>
 </root>
