correcoes no comportamento dos botoes crud de VeiculosView

--- a/Sistema.View/views/Login.resx
+++ b/Sistema.View/views/Login.resx
@@ -122,24 +122,24 @@
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZgAAAL8AAAC/AAAAZgAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKkAAACAAAAAgQAAAKgAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADYAAAB7AAAAFAAAAEwAAADVAAAAKwAAACwAAADVAAAAUAAA
-        ABQAAAB7AAAANgAAAAAAAAAAAAAAAAAAAAcAAAC9AAAAxQAAANsAAADUAAAAbQAAAAsAAAALAAAAbQAA
-        ANQAAADbAAAAxQAAALsAAAAHAAAAAAAAAAAAAABuAAAA0gAAABcAAAAiAAAAGQAAAAAAAAAZAAAAGQAA
-        AAAAAAAZAAAAIgAAABcAAADSAAAAbgAAAAAAAAAAAAAAMwAAAMgAAACUAAAACwAAAAAAAABzAAAA1gAA
-        ANYAAABzAAAAAAAAAAsAAACTAAAAxwAAADMAAAAAAAAAAAAAAAAAAAAlAAAA3gAAAB8AAAAZAAAA1gAA
-        ADEAAAAxAAAA1gAAABkAAAAfAAAA3gAAACQAAAAAAAAAAAAAAAAAAAAAAAAAJgAAAN4AAAAfAAAAGQAA
-        ANYAAAAxAAAAMQAAANYAAAAZAAAAHwAAAN0AAAAkAAAAAAAAAAAAAAAAAAAANAAAAMgAAACTAAAACwAA
-        AAAAAAByAAAA1gAAANYAAAByAAAAAAAAAAsAAACUAAAAxQAAADEAAAAAAAAAAAAAAG4AAADSAAAAFgAA
-        ACIAAAAYAAAAAAAAABgAAAAYAAAAAAAAABYAAAAiAAAAFgAAANIAAABuAAAAAAAAAAAAAAAHAAAAvQAA
-        AMQAAADaAAAA0AAAAGcAAAALAAAACgAAAGQAAADPAAAA2gAAAMUAAAC9AAAABwAAAAAAAAAAAAAAAAAA
-        ADYAAAB7AAAAFAAAAEoAAADVAAAALAAAACwAAADVAAAAUQAAABQAAAB7AAAANgAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAqAAAAIEAAACBAAAAqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGUAAAC/AAAAvwAAAGUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAA//8AAPw/AAD8PwAAwAMAAIABAACCQQAAhCEAAMADAADAAwAAhCEAAIJBAACAAQAAwAMAAPw/
-        AAD8PwAA//8AAA==
+        AAAAAAAAAAAAAAAAAAAAAAAfAAAAkAAAAKUAAACkAAAApAAAAKQAAACkAAAApAAAAKQAAAClAAAAjwAA
+        AB4AAAAAAAAAAAAAAAAAAAAAAAAAWQAAAMcAAABfAAAAXgAAAF4AAABeAAAAXgAAAF4AAABeAAAAXwAA
+        AMcAAABZAAAAAAAAAAAAAAAAAAAAAAAAAF8AAACkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAACkAAAAXwAAAAAAAAAAAAAAAAAAAAAAAABeAAAApQAAAAAAAAAAAAAABAAAAD0AAAA8AAAABAAA
+        AAAAAAAAAAAApQAAAF4AAAAAAAAAAAAAAAAAAAAAAAAAXgAAAKUAAAAAAAAAAAAAADcAAADoAAAA5gAA
+        ADUAAAAAAAAAAAAAAKUAAABeAAAAAAAAAAAAAAAAAAAAAAAAAF4AAAClAAAAAAAAAAAAAAAuAAAA2AAA
+        ANgAAAAtAAAAAAAAAAAAAAClAAAAXgAAAAAAAAAAAAAAAAAAAAAAAABeAAAApQAAAAAAAAAAAAAAAQAA
+        ACsAAAArAAAAAQAAAAAAAAAAAAAApQAAAF4AAAAAAAAAAAAAAAAAAAAAAAAAXwAAAKQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKQAAABfAAAAAAAAAAAAAAAAAAAAAAAAAFYAAADLAAAAcAAA
+        AG4AAABwAAAAcAAAAHAAAABwAAAAbgAAAHAAAADKAAAAVQAAAAAAAAAAAAAAAAAAAAAAAAAXAAAAegAA
+        AK8AAADhAAAAmgAAAJMAAACTAAAAmgAAAOEAAACvAAAAegAAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAA+AAAAtAAAAA4AAAAAAAAAAAAAAA4AAAC0AAAAPgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAMgAAAL0AAAAWAAAAAAAAAAAAAAAWAAAAvQAAADIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAABAAAAC1AAAAcQAAAAkAAAAJAAAAcQAAALUAAAAQAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAALoAAACxAAAAsQAAALoAAAA8AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdAAAAVgAAAFYAAAAdAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAMADAADAAwAAz/MAAMwzAADMMwAAzDMAAMwzAADP8wAAwAMAAMADAADxjwAA8Y8AAPAP
+        AAD4HwAA/D8AAA==
 </value>
   </data>
 </root>
