--- a/Sistema.View/views/ListaView.resx
+++ b/Sistema.View/views/ListaView.resx
@@ -120,4 +120,29 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAANAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAA
+        AA4AAAAAAAAAAAAAAAAAAAAOAAAAogAAAMkAAADEAAAAwgAAAMQAAADEAAAAxAAAAMQAAADEAAAAxAAA
+        AMkAAAChAAAADgAAAAAAAAAAAAAAHwAAAMoAAAA7AAAAHwAAAEQAAAAqAAAAHgAAAB8AAAAfAAAAHwAA
+        AB0AAAA7AAAAyQAAAB8AAAAAAAAAAAAAAB8AAADEAAAAIAAAAA0AAACXAAAAMwAAAAAAAAAdAAAAeQAA
+        AIIAAAB4AAAAPAAAAMIAAAAfAAAAAAAAAAAAAAAfAAAAwgAAAE4AAACbAAAA2wAAALIAAABNAAAAEQAA
+        AEsAAABQAAAASQAAADIAAADDAAAAHwAAAAAAAAAAAAAAHwAAAMMAAAAtAAAANAAAALMAAABZAAAAFAAA
+        ACYAAACaAAAApAAAAJgAAABFAAAAwgAAAB8AAAAAAAAAAAAAAB8AAADEAAAAHgAAAAEAAABaAAAAGgAA
+        AAAAAAAIAAAAHgAAACEAAAAcAAAAJwAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAAAB8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAwAAAA8AAAAAAAAACwAAACAAAADEAAAAHwAAAAAAAAAAAAAAHwAAAMQAAAAiAAAAFAAA
+        ABkAAAAYAAAABgAAABUAAACRAAAAcwAAAIQAAAAqAAAAxAAAAB8AAAAAAAAAAAAAAB8AAADDAAAAMgAA
+        AJEAAACoAAAAoQAAADAAAAAAAAAAewAAAPIAAABpAAAAHwAAAMQAAAAfAAAAAAAAAAAAAAAfAAAAxAAA
+        ACAAAAASAAAAFwAAABYAAAAEAAAAEwAAAI8AAABxAAAAiAAAACwAAADDAAAAHwAAAAAAAAAAAAAAHwAA
+        AMkAAAA7AAAAHAAAAB4AAAAeAAAAHwAAACMAAAAwAAAAIAAAAC8AAAA+AAAAyQAAAB8AAAAAAAAAAAAA
+        AA4AAACiAAAAyQAAAMQAAADEAAAAxAAAAMQAAADEAAAAwwAAAMQAAADDAAAAyQAAAKEAAAANAAAAAAAA
+        AAAAAAAAAAAADgAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAOAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAMADAACAAQAAgAEAAIEBAACAAQAAgAEAAIEBAACPIQAAgAEAAICBAACAAQAAgAEAAIAB
+        AADAAwAA//8AAA==
+</value>
+  </data>
 </root>
